<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_view"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/text_interior"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/resultCard">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNuevaCosecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_new_harvest"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/button_start"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_results"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/button_start"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:backgroundTint="@color/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>